src/packaged/visualforce-utils/default/objects/VisualforceFormatter__c/VisualforceFormatter__c.object-meta.xml
<CustomObject>
    <description>Ephemeral object that is used to format numeric and date values in visualforce</description>
    <label>Visualforce Formatter</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visualforce Formatters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>