src/packaged/visualforce-utils/default/objects/VisualforceFormatter__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>Use this field to format currency values</description>
    <label>Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>