src/packaged/visualforce-utils/default/objects/VisualforceFormatter__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Use this field to format date values</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>