src/packaged/visualforce-utils/default/objects/VisualforceFormatter__c/fields/Numeric__c.field-meta.xml
<CustomField>
    <fullName>Numeric__c</fullName>
    <description>Use this field to format number values</description>
    <label>Numeric</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>