src/packaged/visualforce-utils/default/objects/VisualforceFormatter__c/fields/Percent__c.field-meta.xml
<CustomField>
    <fullName>Percent__c</fullName>
    <description>Use this field to format values as percent</description>
    <label>Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>