src/packaged/visualforce-utils/default/objects/VisualforceFormatter__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <description>Use this field to format time values</description>
    <label>Time</label>
    <type>Time</type>
</CustomField>